bandaid fix for spacing need to figure out flexbox

--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,7 @@ h1{
     justify-content:center;
     align-items: center;
     height: 50vh; 
-    padding-top: 90px;
+    padding-top: 150px;
 }
 .restart-text{
     display:flex;
